fix intext video controls on smaller mobile screens

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -126,6 +126,10 @@
 
 .controls-video {
     @include no-hover;
+    &:hover,
+    &:focus {
+        @include no-hover;
+    }
 }
 
 @mixin hide-vid-controls {
